@@ -15,6 +15,7 @@ Changes in progress
 - xtec-mailer: Displayed reply-to parameter for admins to allow them to change it (Trello #1206)
 - xtec-mailer: Taken Reply-to from headers if specified (Trello #1206)
 - enllacos-educatius: Changed xtec.cat to xtec.gencat.cat (Trello #1207)
+- Added embed and iframe support in kses
 
 
 Changes 16.03.30
